<resources>
    <string name="app_name">w000</string>
    <string name="network_invalid">没有网络连接，请检查网络</string>
    <string name="nodata">暂无数据</string>
    <string name="loading">正在努力加载中...</string>
    <string name="sync_pay_methoding">正在同步支付数据...</string>
    <string name="sync_pay_fail">同步失败</string>
    <string name="forward_jumping">正在跳转...</string>
    <string name="jump">跳过</string>
    <string name="press_again_exit">再按一次退出程序</string>
    <string name="temp_not_lunbo_placeholder_text">暂无轮播活动</string>
    <string name="touzhu_hall">游戏大厅</string>
    <string name="sign_ongoing">签到中...</string>
    <string name="touzhu_str">投注</string>
    <string name="maintaince_page">网站维护</string>
    <string name="search_btn_txt">搜索</string>
    <string name="add_usual_game_title">添加常用游戏</string>
    <string name="setting_usual_game_title">设置常用</string>
    <string name="convert_money_str">转换金额</string>
    <string name="clear_str">清除</string>
    <string name="refresh_sport">刷新</string>
    <string name="goucai_hall">购彩大厅</string>
    <string name="kaijian_notice">开奖公告</string>
    <string name="drawer_open">开</string>
    <string name="drawer_close">关</string>
    <string name="daili_manager">代理管理</string>
    <string name="login">登录</string>
    <string name="mining">挖矿活动</string>
    <string name="convert_feeing">转换中...</string>
    <string name="login_register">登录/注册</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="operate_record">操作记录</string>
    <string name="person_center">个人中心</string>
    <string name="startapp_now">立即体验</string>
    <string name="app_setting">软件设置</string>
    <string name="str_setting">设置</string>
    <string name="userlist_str">用户列表</string>
    <string name="team_views">团队总览</string>
    <string name="myrecommand_str">我的推荐</string>
    <string name="pwd_modify">登陆密码修改</string>
    <string name="yesj">余额生金</string>
    <string name="zhgl">账户管理</string>
    <string name="add_account">新增帐户</string>
    <string name="account_pwd_modify">提款密码修改</string>
    <string name="vervification_pwd_modify">安全问题修改</string>
    <string name="message_center_string">我的站内信</string>
    <string name="message_center_str">站内信</string>
    <string name="notice_message">最新公告</string>
    <string name="meirijiajiang">每日加奖活动</string>
    <string name="message_center_string_slide">我的站内信</string>
    <string name="score_exchange_str">积分兑换</string>
    <string name="contast_us_str">联系我们</string>
    <string name="please_login_first">您还未登录，请先登录再使用噢!</string>
    <string name="register_intime">注册</string>
    <string name="network_error">暂无数据，请退出重试</string>
    <string name="result_error">结果处理错误</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：%s</string>
    <string name="xlistview_footer_hint_normal">加载更多</string>
    <string name="xlistview_footer_hint_ready">松开加载更多</string>
    <string name="xlistview_footer_hint_loading">正在加载&#8230;</string>
    <string name="click_refresh">点击重试</string>
    <string name="click_net_work_check">网络监测</string>
    <string name="exit_app">退出登录</string>
    <string name="confirm_change">确认修改</string>
    <string name="hint_account">请输入帐号</string>
    <string name="hint_oldpwd">请输入旧密码</string>
    <string name="hint_newpwd">请输入新密码</string>
    <string name="hint_confirmpwd">请确认新密码</string>
    <string name="hint_pwd">请输入密码</string>
    <string name="hint_vcode">请输入验证码</string>
    <string name="remember_code">记住密码</string>
    <string name="auto_enter_string">自动登录</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="register_now">立即注册</string>
    <string name="register_str">注册</string>
    <string name="play_free">免费试玩</string>
    <string name="user_account">用户帐号</string>
    <string name="login_pwd">登录密码</string>
    <string name="confirm_login_pwd">确认密码</string>
    <string name="qq_str">QQ</string>
    <string name="realname_str">真实姓名</string>
    <string name="phone_str">电话</string>
    <string name="vertify_code">验证码</string>
    <string name="auto_logining">自动登录中...</string>
    <string name="sync_optimise_route">正在同步最优线路...</string>
    <string name="acocunt_login_direct">已有帐号，直接登录</string>
    <string name="online_service">在线客服</string>
    <string name="user_center_str">用户中心</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_pwd_again">请再次输入密码</string>
    <string name="input_qq">请输入QQ</string>
    <string name="input_realname">请输入真实姓名</string>
    <string name="input_phone">请输入电话号码</string>
    <string name="input_vertify_code">请输入验证码</string>
    <string name="data_syncing">数据同步中...</string>
    <string name="more">更多</string>
    <string name="more_two">更多2</string>
    <string name="weishu_string">万,千,百,十,个</string>
    <string name="func_string">全,大,小,单,双,清</string>
    <string name="please_touzhu_first">请先选择号码并投注!</string>
    <string name="peilv_palcehoder">赔率:</string>
    <string name="noorder_please_touzhu_first">没有需要提交的订单，请先投注!</string>
    <string name="dobets_success">下注成功</string>
    <string name="min_select_numbers_format">请至少选择%d个选项</string>
    <string name="dobets_fail">下注失败</string>
    <string name="validate_fail">校验失败</string>
    <string name="temp_not_support">暂无支持</string>
    <string name="dobets_token_fail">获取下注口令失败</string>
    <string name="vertify_bet_tokening">验证下注口令中...</string>
    <string name="acquire_valid_qishuing">获取可追期数中...</string>
    <string name="acquire_message_going">获取站内信中...</string>
    <string name="loginout_onging">退出登录中...</string>
    <string name="acquire_qishu_fail">获取期数失败</string>
    <string name="acquire_data_fail">获取数据失败</string>
    <string name="acquire_peilv_fail">同步赔率失败</string>
    <string name="no_peilv_data">没有赔率数据</string>
    <string name="acquire_last_result_fail">获取最近开奖结果失败</string>
    <string name="acquire_current_qihao_fail">获取当前期号失败</string>
    <string name="acquire_fail">获取失败</string>
    <string name="exchange_fail">兑换失败</string>
    <string name="exchange_success">兑换成功</string>
    <string name="sync_tikuan_info_fail">同步提款信息失败</string>
    <string name="check_safety_fail">检查提款帐户安全失败</string>
    <string name="fetch_account_fail">获取提款帐户资讯失败</string>
    <string name="post_fail">提交失败</string>
    <string name="bet_ongoing">正在下注...</string>
    <string name="please_pick_numbers_first">请先选择号码!</string>
    <string name="caipiao_string">彩票</string>
    <string name="qihao_string">第%s期</string>
    <string name="qihao_string2">第%1$s期:%2$s </string>
    <string name="qihao_string3">第%s期:</string>
    <string name="caipiao_touzhu_record">彩票投注记录</string>
    <string name="touzhu_record">投注记录</string>
    <string name="account_change_record">帐变记录</string>
    <string name="liuhe_touzhu_record">六合投注记录</string>
    <string name="touzhu_money_format">投注金额: %s元</string>
    <string name="paijian_money_format">派奖金额: %s元</string>
    <string name="change_before_money_format">变动前金额: %s元</string>
    <string name="change_after_money_format">变动后金额: %s元</string>
    <string name="fee_money_format">手续费: %s元</string>
    <string name="biandong_money_format">变动金额: %s元</string>
    <string name="touzhu_order_detail">注单详情</string>
    <string name="account_change_detail">帐变详情</string>
    <string name="feedback_title">建议反馈</string>
    <string name="feedback_record">反馈纪录</string>
    <string name="customer_service_title">在线客服</string>
    <string name="customer_service_intro">游戏过程中遇到的问题（如充值提款等），请联系在线客服以便我们为您及时处理。</string>
    <string name="suggestion_title">提交建议</string>
    <string name="suggestion_intro">如果您对游戏或者平台有好的建议可以进行提交，官方客服会在48小时内进行回复。我们会参考您的反馈不断优化我们的产品和服务。</string>
    <string name="complaint_title">我要投诉</string>
    <string name="complaint_intro">为了让平台所有会员获得最好的服务，维护会员权益，我们为会员提供出款监督服务，如出款遇到恶意拖延、不出款等问题可以提出投诉！我们会尽快为您解决。</string>
    <string name="feedback_hint">您的反馈是我们成功的动力，如有需要，请附上您的回馈方式，如：VX、QQ，或您的手机号码。</string>
    <string name="suggestion_hint">请输入您的反馈...</string>
    <string name="feedback_uploaded">回馈意见已上传完成</string>
    <string name="commit_str">提交</string>
    <string name="feedback_record_all">全部</string>
    <string name="feedback_record_replied">已回复</string>
    <string name="feedback_record_not_replied">待回复</string>
    <string name="suggestion_type">建议类型：</string>
    <string name="suggestion_status">状态：</string>
    <string name="suggestion_datetime">提交时间：</string>
    <string name="suggestion_description">内容描述：</string>
    <string name="suggestion_reply_datetime">最后反馈时间：</string>
    <string name="hard_loading">玩命加载中...</string>
    <string name="acquire_award_ongoing">获取奖项中...</string>
    <string name="coujian_going">抽奖中...</string>
    <string name="sync_sys_timing">同步系统时间中...</string>
    <string name="sync_sys_versioning">同步系统版本中...</string>
    <string name="acquire_lottery_playing">同步玩法信息中...</string>
    <string name="sync_lottery_playing">同步彩种中...</string>
    <string name="get_recording">获取记录中...</string>
    <string name="version_checking">版本检测中...</string>
    <string name="acquire_rp_ongoing">红包获取中...</string>
    <string name="get_game_ongoing">获取赛事中...</string>
    <string name="no_game_data">没有赛事内容</string>
    <string name="get_peilv_recording">努力获取赔率中...</string>
    <string name="cancel_ongogin">撤销中...</string>
    <string name="get_detail_recording">获取详情中...</string>
    <string name="get_record_fail">获取记录失败</string>
    <string name="get_member_list_fail">获取用户列表失败</string>
    <string name="acquire_rp_fail">获取红包失败</string>
    <string name="grab_rp_fail">抢红包失败</string>
    <string name="loginout_fail">退出登录失败</string>
    <string name="check_version_fail">检测失败</string>
    <string name="jump_fail">获取跳转链接失败</string>
    <string name="sync_fee_fail">同步余额失败</string>
    <string name="sync_fail">同步失败,请重试</string>
    <string name="fee_convert_fail">额度转换失败</string>
    <string name="fee_convert_string">额度转换</string>
    <string name="big_pan_string">幸运大转盘</string>
    <string name="fee_convert_success">额度转换成功</string>
    <string name="sync_fee_ongoging">同步余额中...</string>
    <string name="jump_url_empty">跳转链接为空，无法进入游戏</string>
    <string name="will_open">即将开放</string>
    <string name="get_goucai_data_fail">获取购彩数据失败</string>
    <string name="get_open_results_fail">获取开奖结果失败</string>
    <string name="open_haoma">开奖号码:</string>
    <string name="cancel_order_fail">撤单失败</string>
    <string name="cancel_order_success">撤销订单成功</string>
    <string name="get_data_fail">获取失败</string>
    <string name="sync_caizhong_ing">同步彩种信息中...</string>
    <string name="sync_ing">同步中...</string>
    <string name="sync_unread_message_ing">获取未读消息数中...</string>
    <string name="sync_sys_configing">同步系统配置中...</string>
    <string name="check_route_url">线路检测中...</string>
    <string name="pls_change_route_url">线路异常，请切换线路</string>
    <string name="no_route_urls">暂无其它可用线路，请联系客服！</string>
    <string name="feedback_list_str">我的反馈</string>
    <string name="feedback">意见反馈</string>
    <string name="dxds">大,小,单,双</string>
    <string name="gewei_numbers">0,1,2,3,4,5,6,7,8,9</string>
    <string name="kaijian_deadline_format_time">第%1$s期截止时间:</string>
    <string name="kaijian_deadline_format_open_time">第%1$s期开盘时间:</string>
    <string name="kaijian_deadline_format">距%1$s期截止:%2$s</string>
    <string name="red_packet_string">抢红包</string>
    <string name="user_name">用户名：</string>
    <string name="login_password">登录密码：</string>
    <string name="confirm_password">确认密码：</string>
    <string name="input_username_please">请输入用户名(6–20个字符数字或字母)</string>
    <string name="input_login_password">请输入登录密码</string>
    <string name="input_password_again">请再次输入登录密码</string>
    <string name="confirm">确认</string>
    <string name="filter_code">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
</resources>