<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/user_name" />

        <EditText
            android:id="@+id/et_input_user_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@null"
            android:digits="@string/filter_code"
            android:hint="@string/input_username_please"
            android:maxLength="20"
            android:singleLine="true"
            android:textSize="15sp" />
    </LinearLayout>

    <include layout="@layout/view_divider_dark_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/login_password" />

        <EditText
            android:id="@+id/et_input_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@null"
            android:digits="@string/filter_code"
            android:hint="@string/input_login_password"
            android:inputType="textPassword"
            android:maxLength="15"
            android:singleLine="true"
            android:textSize="15sp" />
    </LinearLayout>

    <include layout="@layout/view_divider_dark_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/confirm_password" />

        <EditText
            android:id="@+id/et_input_password_again"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@null"
            android:digits="@string/filter_code"
            android:hint="@string/input_password_again"
            android:inputType="textPassword"
            android:maxLength="15"
            android:singleLine="true"
            android:textSize="15sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/light_gray">

        <androidx.cardview.widget.CardView
            android:id="@+id/cd_confirm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="5dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </androidx.cardview.widget.CardView>

    </FrameLayout>
</LinearLayout>