<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        android:id="@+id/title"
        layout="@layout/top_title"/>

    <LinearLayout
        android:id="@+id/linearActions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/suggestion_title"
            android:textSize="18sp"
            android:textColor="@color/half_black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="4dp"
            android:text="@string/suggestion_intro"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/buttonSuggestion"
            android:layout_width="84dp"
            android:layout_height="36dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="end"
            android:text="@string/suggestion_title"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@drawable/red_corner_btn_bg_selector"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/lightgrey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/complaint_title"
            android:textSize="18sp"
            android:textColor="@color/half_black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="4dp"
            android:text="@string/complaint_intro"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/buttonComplaint"
            android:layout_width="84dp"
            android:layout_height="36dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="end"
            android:text="@string/complaint_title"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@drawable/red_corner_btn_bg_selector"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/lightgrey"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="12dp"
        android:visibility="gone">
        <EditText
            android:id="@+id/editFeedback"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:gravity="fill_horizontal"
            android:padding="6dp"
            android:background="@drawable/input_frame_bg"
            android:textSize="16sp"
            android:hint="@string/feedback_hint"/>

        <Button
            android:id="@+id/buttonSend"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/charge_money_btn_normal"
            android:text="@string/commit_str"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>