<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        android:id="@+id/title"
        layout="@layout/top_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        android:layout_marginTop="64dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edit_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_frame_bg"
                android:hint="@string/hint_oldpwd"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:drawableLeft="@drawable/icon_auto_pass"
                android:padding="8dp"
                android:textColor="#3E3D3D"
                android:textColorHint="@color/input_text_hint"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <EditText
                android:id="@+id/edit_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_frame_bg"
                android:drawableLeft="@drawable/icon_auto_pass"
                android:hint="@string/hint_newpwd"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="#3E3D3D"
                android:textColorHint="@color/input_text_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/edit_confirm_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/input_frame_bg"
                android:drawableLeft="@drawable/icon_auto_pass"
                android:hint="@string/hint_confirmpwd"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="#3E3D3D"
                android:textColorHint="@color/input_text_hint" />

            <ImageView
                android:id="@+id/switch_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_confirm"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/confirm_change"
        android:textSize="14sp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/exit_btn_bg"/>
</LinearLayout>
